Implement signed url retrieval to upload images to azure blob storage